--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.29.0",
+    "@next/font": "^13.0.6",
+    "@stitches/react": "^1.2.8",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0"
   }
 }
