--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "^13.0.6",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.2.1",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-markdown": "^8.0.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
