--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
-    "react-markdown": "^8.0.4",
-    "yup": "^0.32.11"
+    "react-markdown": "^8.0.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
